--- a/crwn-clothing/.eslintrc.json
+++ b/crwn-clothing/.eslintrc.json
@@ -4,7 +4,8 @@
         "es2021": true
     },
     "extends": [
-        "eslint:recommended",
+        "airbnb",
+        "airbnb/hooks",
         "plugin:react/recommended"
     ],
     "parserOptions": {
