--- a/crwn-clothing/.eslintrc.json
+++ b/crwn-clothing/.eslintrc.json
@@ -6,7 +6,8 @@
     "extends": [
         "airbnb",
         "airbnb/hooks",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:prettier/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
