--- a/crwn-clothing/package.json
+++ b/crwn-clothing/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-testing-library": "^6.2.0",
     "prettier": "3.2.5"
   }
 }
