--- a/crwn-clothing/.eslintrc.json
+++ b/crwn-clothing/.eslintrc.json
@@ -16,6 +16,20 @@
     "plugins": [
         "react"
     ],
+    "overrides": [
+      {
+        "files": ["**/__tests__/**/*.[jt]s?(x)", "**/?(*.)+(spec|test).[jt]s?(x)"],
+        "extends": ["plugin:testing-library/react"],
+        "plugins": ["testing-library"],
+        "rules": {
+          "testing-library/await-async-queries": "error",
+          "testing-library/no-await-sync-queries": "error",
+          "testing-library/no-debugging-utils": "warn",
+          "testing-library/no-dom-import": "off",
+          "no-undef": "off"
+        }
+      }
+    ],
     "rules": {
       "react/react-in-jsx-scope": 0
     }
