--- a/crwn-clothing/.eslintrc.json
+++ b/crwn-clothing/.eslintrc.json
@@ -31,6 +31,7 @@
       }
     ],
     "rules": {
-      "react/react-in-jsx-scope": 0
+      "react/react-in-jsx-scope": 0,
+      "react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
     }
 }
