--- a/crwn-clothing/package.json
+++ b/crwn-clothing/package.json
@@ -47,6 +47,7 @@
     "eslint-plugin-react": "^7.28.0",
     "eslint-plugin-react-hooks": "^4.3.0",
     "eslint-plugin-testing-library": "^6.2.0",
-    "prettier": "3.2.5"
+    "prettier": "3.2.5",
+    "sass": "^1.71.1"
   }
 }
